# DoneGate-MCP

./: CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: architecture-v0.1.md  end-to-end-demo.md  plan.md  product-notes.md  release-checklist.md  release-notes-v0.1.0.md  release-notes-v0.4.0.md  repository-metadata.md  startup-guide.md
docs/plans/: 2026-04-19-lifecycle-derived-state-refactor.md  2026-04-22-v0.2-active-task-context-implementation-plan.md  2026-04-22-v0.2-bootstrap-implementation-plan.md  2026-04-22-v0.2-delivery-supervision-design.md  2026-04-22-v0.2-supervision-reporting-implementation-plan.md  2026-04-22-v0.3-branch-context-and-path-normalization-design.md  2026-04-22-v0.3-branch-context-implementation-plan.md  2026-04-22-v0.3-roadmap.md  2026-04-23-v0.4-advisory-review-design.md  2026-04-23-v0.4-advisory-review-implementation-plan.md
examples/: hermes-mcp-config.yaml
scripts/: pre-commit.sh  pre-push.sh
src/donegate_mcp/: config.py  models.py
src/donegate_mcp/cli/: formatters.py  main.py
src/donegate_mcp/domain/: lifecycle.py  read_models.py  services.py
src/donegate_mcp/mcp/: server.py
src/donegate_mcp/storage/: fs.py  state_store.py  task_store.py  (+1 more)
tests/: test_acceptance_guidance_docs.py  test_architecture_hardening.py  test_cli.py  test_compat_lifecycle.py  test_dashboard.py  test_lifecycle.py  test_mcp_server.py  test_services.py  test_services_self_test.py  test_transition_done_after_facts.py
