[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "donegate-mcp"
version = "0.3.0"
description = "A delivery quality gate for AI-assisted software work with a hook-friendly CLI and optional MCP server"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = []
authors = [
  { name = "Hermes Agent" }
]

[project.optional-dependencies]
mcp = ["mcp>=1.9.0"]
test = ["pytest>=8.0"]

[project.scripts]
donegate-mcp = "donegate_mcp.cli.main:main"
donegate-mcp-serve = "donegate_mcp.mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
